[package]
name = "bt"
version = "0.1.0"
edition = "2021"

[dependencies]
bendy = "0.3.3"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
reqwest = "0.12.9"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha1-checked = "0.10.0"
tokio = { version = "1", features = ["full"] }
url-escape = "0.1.1"
